fix #4407: align terminal renderer backgrounds (#4408)

--- a/src/client/components/terminal/terminal.styl
+++ b/src/client/components/terminal/terminal.styl
@@ -32,6 +32,10 @@
   margin-left 5px
 
 #container
+  .xterm
+    background transparent
+  .xterm-viewport
+    background-color transparent !important
   .xterm-screen::before
     content ''
     position absolute
